# contrast_arena

./: Makefile  README.md  client_app  debug_game.sh  run_1000_games.sh  run_game.sh  run_tournament.sh  server_app  test_1_game.sh  test_ab_simple.sh  test_alphabeta.sh  test_mcts.sh  test_ntuple  test_ntuple.cpp  test_ntuple_notile  test_ntuple_notile.cpp  test_protocol_tile  test_protocol_tile.cpp  test_roles.sh
ai/: CMakeLists.txt  contrast_model_final.pth  main.cpp
ai/contrast_alphazero/: .gitignore  ISSUE.md  README.md  REFACTORING_SUMMARY.md  comand_list.md  config.py  contrast_game.py  debug.py  elo_evaluator.py  inference_server.py  logger.py  main.py  mcts.py  model.py  play_vs_ai.py  pyproject.toml  requirements-minimal.txt  requirements.txt  server.py
ai/contrast_alphazero/players/: __init__.py  alpha_zero.py  base.py  human.py  random.py  rule_based.py
ai/contrast_alphazero/templates/: index.html
ai/contrast_alphazero/tests/: test_config_integration.py  test_contrast_game.py  test_main.py  test_mcts.py  test_model.py  test_play_vs_ai.py  test_rule_based_player.py
ai/include/: alphabeta.hpp  greedy_policy.hpp  mcts.hpp  ntuple_big.hpp  random_policy.hpp  rule_based_policy.hpp  rule_based_policy2.hpp
ai/src/: alphabeta.cpp  greedy_policy.cpp  mcts.cpp  ntuple.cpp  ntuple_big.cpp  random_policy.cpp  rule_based_policy.cpp  rule_based_policy2.cpp
ai/tools/: check_eval_flip.cpp  check_eval_random.cpp  compare_two_boards.cpp  measure_alphabeta_depth.cpp
client/: ALPHAZERO_README.md  draw_tester.py  draw_tester_O.py  main.cpp  python_alphazero_bot.py  (+3 more)
(+43 files in other folders)
